--- a/test/src/main/java/uks/fulibgen/shop/events/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/events/classModel.yaml
@@ -1,5 +1,5 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	event 	serviceSubscribed 	productStored 	orderRegistered 	orderPicked 	mockupDone
+  classes: 	event 	serviceSubscribed 	productStored 	commandSent 	orderRegistered 	shopPolicy 	orderPicked
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
@@ -13,7 +13,7 @@
   modified: 	false
   name: 	Event
   propertyStyle: 	Bean
-  subClasses: 	serviceSubscribed 	productStored 	orderRegistered 	orderPicked 	mockupDone
+  subClasses: 	serviceSubscribed 	productStored 	commandSent 	orderRegistered 	shopPolicy 	orderPicked
 
 - serviceSubscribed: 	org.fulib.classmodel.Clazz
   attributes: 	serviceSubscribed_serviceUrl
@@ -31,6 +31,14 @@
   propertyStyle: 	Bean
   superClass: 	event
 
+- commandSent: 	org.fulib.classmodel.Clazz
+  attributes: 	commandSent_type 	commandSent_user 	commandSent_l1 	commandSent_product 	commandSent_customer 	commandSent_address 	commandSent_ok
+  model: 	c
+  modified: 	false
+  name: 	CommandSent
+  propertyStyle: 	Bean
+  superClass: 	event
+
 - orderRegistered: 	org.fulib.classmodel.Clazz
   attributes: 	orderRegistered_product 	orderRegistered_customer 	orderRegistered_address 	orderRegistered_user
   model: 	c
@@ -39,19 +47,19 @@
   propertyStyle: 	Bean
   superClass: 	event
 
+- shopPolicy: 	org.fulib.classmodel.Clazz
+  attributes: 	shopPolicy_OrderApproved 	shopPolicy_trigger 	shopPolicy_order
+  model: 	c
+  modified: 	false
+  name: 	ShopPolicy
+  propertyStyle: 	Bean
+  superClass: 	event
+
 - orderPicked: 	org.fulib.classmodel.Clazz
   attributes: 	orderPicked_pickTask 	orderPicked_box 	orderPicked_user
   model: 	c
   modified: 	false
   name: 	OrderPicked
-  propertyStyle: 	Bean
-  superClass: 	event
-
-- mockupDone: 	org.fulib.classmodel.Clazz
-  attributes: 	mockupDone_OrderRegistered 	mockupDone_l1 	mockupDone_product 	mockupDone_customer 	mockupDone_address 	mockupDone_ok
-  model: 	c
-  modified: 	false
-  name: 	MockupDone
   propertyStyle: 	Bean
   superClass: 	event
 
@@ -116,6 +124,69 @@
   type: 	String
   typeSignature: 	String
 
+- commandSent_type: 	org.fulib.classmodel.Attribute
+  clazz: 	commandSent
+  id: 	CommandSent_type
+  modified: 	false
+  name: 	type
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- commandSent_user: 	org.fulib.classmodel.Attribute
+  clazz: 	commandSent
+  id: 	CommandSent_user
+  modified: 	false
+  name: 	user
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- commandSent_l1: 	org.fulib.classmodel.Attribute
+  clazz: 	commandSent
+  id: 	CommandSent_l1
+  modified: 	false
+  name: 	l1
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- commandSent_product: 	org.fulib.classmodel.Attribute
+  clazz: 	commandSent
+  id: 	CommandSent_product
+  modified: 	false
+  name: 	product
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- commandSent_customer: 	org.fulib.classmodel.Attribute
+  clazz: 	commandSent
+  id: 	CommandSent_customer
+  modified: 	false
+  name: 	customer
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- commandSent_address: 	org.fulib.classmodel.Attribute
+  clazz: 	commandSent
+  id: 	CommandSent_address
+  modified: 	false
+  name: 	address
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- commandSent_ok: 	org.fulib.classmodel.Attribute
+  clazz: 	commandSent
+  id: 	CommandSent_ok
+  modified: 	false
+  name: 	ok
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
 - orderRegistered_product: 	org.fulib.classmodel.Attribute
   clazz: 	orderRegistered
   id: 	OrderRegistered_product
@@ -152,6 +223,33 @@
   type: 	String
   typeSignature: 	String
 
+- shopPolicy_OrderApproved: 	org.fulib.classmodel.Attribute
+  clazz: 	shopPolicy
+  id: 	ShopPolicy_OrderApproved
+  modified: 	false
+  name: 	OrderApproved
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- shopPolicy_trigger: 	org.fulib.classmodel.Attribute
+  clazz: 	shopPolicy
+  id: 	ShopPolicy_trigger
+  modified: 	false
+  name: 	trigger
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- shopPolicy_order: 	org.fulib.classmodel.Attribute
+  clazz: 	shopPolicy
+  id: 	ShopPolicy_order
+  modified: 	false
+  name: 	order
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
 - orderPicked_pickTask: 	org.fulib.classmodel.Attribute
   clazz: 	orderPicked
   id: 	OrderPicked_pickTask
@@ -175,60 +273,6 @@
   id: 	OrderPicked_user
   modified: 	false
   name: 	user
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- mockupDone_OrderRegistered: 	org.fulib.classmodel.Attribute
-  clazz: 	mockupDone
-  id: 	MockupDone_OrderRegistered
-  modified: 	false
-  name: 	OrderRegistered
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- mockupDone_l1: 	org.fulib.classmodel.Attribute
-  clazz: 	mockupDone
-  id: 	MockupDone_l1
-  modified: 	false
-  name: 	l1
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- mockupDone_product: 	org.fulib.classmodel.Attribute
-  clazz: 	mockupDone
-  id: 	MockupDone_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- mockupDone_customer: 	org.fulib.classmodel.Attribute
-  clazz: 	mockupDone
-  id: 	MockupDone_customer
-  modified: 	false
-  name: 	customer
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- mockupDone_address: 	org.fulib.classmodel.Attribute
-  clazz: 	mockupDone
-  id: 	MockupDone_address
-  modified: 	false
-  name: 	address
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- mockupDone_ok: 	org.fulib.classmodel.Attribute
-  clazz: 	mockupDone
-  id: 	MockupDone_ok
-  modified: 	false
-  name: 	ok
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
